# llm-cost-lens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: openai_calls.jsonl  pricing.json
src/llm_cost_lens/: __init__.py  __main__.py  analysis.py  cli.py  models.py  parser.py  pricing.py  report.py
tests/: test_analysis.py  test_parser.py  test_report_and_cli.py
