[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-cost-lens"
version = "0.1.0"
description = "Inspect LLM API logs for cost, latency, budget, and usage anomalies."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mert Efe Kurt" }]
keywords = ["llm", "observability", "cost", "automation", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
llm-cost-lens = "llm_cost_lens.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cost_lens"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "T20", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
